# oracle-ai-for-sustainable-dev

./: .gitignore  Dockerfile  README 2.md  README.md  build.sh  build_and_push.sh  build_and_run.sh  env.properties  pom.xml  run.sh  run_docker.sh  sonar-project.properties
ai/python-mcp-oci-llm-agentic-ai/oracledb_mcp_demo/: .gitignore  .oracledb-mcp-demo.md  README.md  __init__.py  config_rag.py  init_rag_streamlit_exp.py  pyproject.toml  pytest.ini
ai/python-mcp-oci-llm-agentic-ai/oracledb_mcp_demo/config/: config.json
ai/python-mcp-oci-llm-agentic-ai/oracledb_mcp_demo/core/: __init__.py  advanced_rag_system.py  advanced_search.py  analysis_plugins.py  analysis_tools.py  config.py  dependency_analyzer.py  feedback_loop.py  logging_config.py  orchestrator.py  performance_monitor.py  real_database_session.py  semantic_cache.py  task_orchestrator.py  task_system.py  vector_db_manager.py  vector_db_manager_mcp.py
ai/python-mcp-oci-llm-agentic-ai/oracledb_mcp_demo/core/context/: store.py
ai/python-mcp-oci-llm-agentic-ai/oracledb_mcp_demo/core/planning/: context_builder.py  llm_planner.py  task_critic.py  validator.py
ai/python-mcp-oci-llm-agentic-ai/oracledb_mcp_demo/core/rag_cache/: __init__.py  cache_key_generator.py  cache_manager.py  models.py
ai/python-mcp-oci-llm-agentic-ai/oracledb_mcp_demo/core/rag_parallel/: __init__.py  models.py  parallel_executor.py  query_decomposer.py  result_aggregator.py
ai/python-mcp-oci-llm-agentic-ai/oracledb_mcp_demo/llm/: __init__.py  base.py  factory.py  local_provider.py  oci_provider.py  openai_provider.py  rag_enhanced_provider.py
ai/python-mcp-oci-llm-agentic-ai/oracledb_mcp_demo/mcp_client/: __init__.py  mcp_connection.py
ai/python-mcp-oci-llm-agentic-ai/oracledb_mcp_demo/oracledb_mcp_demo/: .oracledb_mcp_demo.md  __main__.py  cli.py
(+1205 files in other folders)
